Fixed the ALC page, folders spacing updated, improve responsiveness, and added a description to the progress

--- a/styles/homePage.css
+++ b/styles/homePage.css
@@ -54,7 +54,7 @@
 }
 
 #iButtonInfoContainer {
-    display: flex;
+    display: none;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     position: absolute;
